--- a/jupyter_notebook/test.ipynb
+++ b/jupyter_notebook/test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Subject of this notebook: Practice Notebook**\n",
+    "# **Subject of this notebook: Jupyter Notebook**\n",
     "### Authored by: Abdullah Ahmad\n",
     "### Where to contact: [GitHub](https://github.com/Abdullah-319)"
    ]
