--- a/jupyter_notebook/test.ipynb
+++ b/jupyter_notebook/test.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# **Subject of this notebook: Jupyter Notebook**\n",
     "### Authored by: Abdullah Ahmad\n",
-    "### Where to contact: [GitHub](https://github.com/Abdullah-319)"
+    "### Where to contact: [GitHub](https://github.com/Abdullah-319) OR [Email](abdullahahmad319.319@gmail.com)"
    ]
   },
   {
